--- a/docs/_config.yml
+++ b/docs/_config.yml
@@ -1,6 +1,6 @@
 baseurl: /databall1
 title: DataBall
-description: Using team and player stats to predict NBA game winners
+description: Using stats to predict NBA game winners
 
 include:
   - _pages
